[project]
name = "tollgate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "google-genai>=2.12.1",
    "groq>=1.5.0",
    "pandas>=3.0.3",
    "pgvector>=0.5.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "uvicorn[standard]>=0.51.0",
]
